force-app/main/default/objects/Due_Diligence__c/fields/Prospective_Project__c.field-meta.xml
<CustomField>
    <fullName>Prospective_Project__c</fullName>
    <label>Prospective Project</label>
    <length>255</length>
    <type>Text</type>
</CustomField>