force-app/main/default/objects/Due_Diligence__c/fields/Quality_of_Communication_Document_submit__c.field-meta.xml
<CustomField>
    <fullName>Quality_of_Communication_Document_submit__c</fullName>
    <formula>CASE(TEXT(    Quality_of_Communication_Documents_sub__c ),
&apos;Exceed Expectations&apos;,  Quality_of_Communication_Document_Weight__c *1,
 &apos;Meet Expectations&apos;,Quality_of_Communication_Document_Weight__c*0.85,
&apos;Average&apos;,Quality_of_Communication_Document_Weight__c *0.6,
&apos;High Risk&apos;,Quality_of_Communication_Document_Weight__c*0.25,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Quality of Communication / Documents submitted Score</inlineHelpText>
    <label>Quality of Communication/Document submit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>