force-app/main/default/objects/Due_Diligence__c/fields/Quality_of_Communication_Document_Weight__c.field-meta.xml
<CustomField>
    <fullName>Quality_of_Communication_Document_Weight__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Quality of Communication / Documents submitted Weight</inlineHelpText>
    <label>Quality of Communication/Document Weigh%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>