force-app/main/default/objects/Due_Diligence__c/fields/Quality_of_Communication_Documents_sub__c.field-meta.xml
<CustomField>
    <fullName>Quality_of_Communication_Documents_sub__c</fullName>
    <inlineHelpText>Quality of Communication / Documents submitted Rating</inlineHelpText>
    <label>Quality of Communication/Document submit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Exceed Expectations</fullName>
            </value>
            <value>
                <fullName>Meet Expectations</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>High Risk</fullName>
            </value>
            <value>
                <fullName>Not Ready for Partnership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>