force-app/main/default/objects/Due_Diligence__c/fields/Quality_PC_SC_List_Rating__c.field-meta.xml
<CustomField>
    <fullName>Quality_PC_SC_List_Rating__c</fullName>
    <inlineHelpText>Quality / Process Certifications / Standards compliance list Rating.</inlineHelpText>
    <label>Quality/PC/SC List Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Exceed Expectations</fullName>
            </value>
            <value>
                <fullName>Meet Expectations</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>High Risk</fullName>
            </value>
            <value>
                <fullName>Not Ready for Partnership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>