force-app/main/default/objects/Due_Diligence__c/fields/Quality_PC_SC_List_Score__c.field-meta.xml
<CustomField>
    <fullName>Quality_PC_SC_List_Score__c</fullName>
    <formula>CASE(TEXT(  Quality_PC_SC_List_Rating__c ),
 &apos;Exceed Expectations&apos;,  Quality_PC_SC_List_Weight__c *1,
 &apos;Meet Expectations&apos;,Quality_PC_SC_List_Weight__c *0.85,
&apos;Average&apos;,Quality_PC_SC_List_Weight__c *0.6,
&apos;High Risk&apos;,Quality_PC_SC_List_Weight__c *0.25,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Quality / Process Certifications / Standards compliance list Score.</inlineHelpText>
    <label>Quality/PC/SC List Score%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>