force-app/main/default/objects/Due_Diligence__c/fields/Quality_PC_SC_List_Weight__c.field-meta.xml
<CustomField>
    <fullName>Quality_PC_SC_List_Weight__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Quality/PC/SC List Weight%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>