force-app/main/default/objects/Due_Diligence__c/fields/QualityPCSC_List__c.field-meta.xml
<CustomField>
    <fullName>QualityPCSC_List__c</fullName>
    <label>--------Quality/PC/SC List--------</label>
    <length>255</length>
    <type>Text</type>
</CustomField>