force-app/main/default/objects/Due_Diligence__c/fields/R_del__c.field-meta.xml
<CustomField>
    <fullName>R_del__c</fullName>
    <formula>IMAGE(&quot;/sfc/servlet.shepherd/version/download/068N0000001X2p8&quot;,&quot;red&quot; , 30, 30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Red Color Image</label>
    <type>Text</type>
</CustomField>