force-app/main/default/objects/Due_Diligence__c/fields/RAG_Responses_Quality_of_Doc__c.field-meta.xml
<CustomField>
    <fullName>RAG_Responses_Quality_of_Doc__c</fullName>
    <formula>IF(Overall_Score_Responses_Quality_of_Doc__c=0 || ISNULL(Overall_Score_Responses_Quality_of_Doc__c),&apos;&apos;,If((Overall_Score_Responses_Quality_of_Doc__c/Responses_Quality_of_Doc_Overall_Weight__c)*100 &lt;=55, IMAGE(&quot;/resource/1616506498000/Red&quot;, &apos;Red&apos;,30,30) ,IF((Overall_Score_Responses_Quality_of_Doc__c/Responses_Quality_of_Doc_Overall_Weight__c)*100&lt;80,IMAGE(&quot;/resource/1616506522000/Amber&quot;,&apos;Amber&apos;,30,30),If((Overall_Score_Responses_Quality_of_Doc__c/Responses_Quality_of_Doc_Overall_Weight__c)*100&gt;=80,IMAGE(&quot;/resource/1616506472000/Green&quot;, &apos;Green&apos;,30,30),&apos;&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RAG(Responses/Quality of Doc)</label>
    <type>Text</type>
</CustomField>