force-app/main/default/objects/Due_Diligence__c/fields/RAG_SLA__c.field-meta.xml
<CustomField>
    <fullName>RAG_SLA__c</fullName>
    <formula>IF( Overall3__c  &lt;=5, IMAGE(&quot;/resource/1616506498000/Red&quot;, &apos;Red&apos;,30,30) ,IF(Overall3__c &lt;=8,IMAGE(&quot;/resource/1616506522000/Amber&quot;, &apos;Amber&apos;,30,30),IMAGE(&quot;/resource/1616506472000/Green&quot;, &apos;Green&apos;,30,30)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RAG(SLA)</label>
    <type>Text</type>
</CustomField>