force-app/main/default/objects/Due_Diligence__c/fields/RAG_Spare_Management__c.field-meta.xml
<CustomField>
    <fullName>RAG_Spare_Management__c</fullName>
    <formula>IF( (Overall2__c/Spare_Management_Overall_Weight__c)*100 &lt;=55, IMAGE(&quot;/resource/1616506498000/Red&quot;, &apos;Red&apos;,30,30) ,IF((Overall2__c/Spare_Management_Overall_Weight__c)*100 &lt;80,IMAGE(&quot;/resource/1616506522000/Amber&quot;, &apos;Amber&apos;,30,30),IMAGE(&quot;/resource/1616506472000/Green&quot;, &apos;Green&apos;,30,30)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RAG(Spare Management)</label>
    <type>Text</type>
</CustomField>