force-app/main/default/objects/Due_Diligence__c/fields/Referral_Customer_feedback_Score__c.field-meta.xml
<CustomField>
    <fullName>Referral_Customer_feedback_Score__c</fullName>
    <formula>CASE(TEXT(Referral_Customer_feedback_Rating__c ),
&apos;Exceed Expectations&apos;,  Referral_Customer_feedback_Weight__c *1,
 &apos;Meet Expectations&apos;,Referral_Customer_feedback_Weight__c *0.85,
&apos;Average&apos;,Referral_Customer_feedback_Weight__c *0.6,
&apos;High Risk&apos;,Referral_Customer_feedback_Weight__c *0.25,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Customer feedback Score%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>