force-app/main/default/objects/Due_Diligence__c/fields/Referral_Customer_feedback_Weight__c.field-meta.xml
<CustomField>
    <fullName>Referral_Customer_feedback_Weight__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Referral Customer feedback Weight%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>