force-app/main/default/objects/Due_Diligence__c/fields/Responses_Quality_of_Doc_Overall_Weight__c.field-meta.xml
<CustomField>
    <fullName>Responses_Quality_of_Doc_Overall_Weight__c</fullName>
    <formula>(Responsiveness_Weight__c +  Quality_of_Communication_Document_Weight__c + Proactiveness_Weight__c + Value_add_innovation_Weight__c ) / 100</formula>
    <label>Responses/Quality of Doc Overall Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>