force-app/main/default/objects/Due_Diligence__c/fields/Responsiveness_Score__c.field-meta.xml
<CustomField>
    <fullName>Responsiveness_Score__c</fullName>
    <formula>CASE(TEXT(  Responsiveness_Rating__c ),
&apos;Exceed Expectations&apos;,  Responsiveness_Weight__c *1,
 &apos;Meet Expectations&apos;,Responsiveness_Weight__c *0.85,
&apos;Average&apos;,Responsiveness_Weight__c *0.6,
&apos;High Risk&apos;,Responsiveness_Weight__c *0.25,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Responsiveness Score%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>