force-app/main/default/objects/Due_Diligence__c/fields/Responsiveness_Weight__c.field-meta.xml
<CustomField>
    <fullName>Responsiveness_Weight__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Responsiveness Weight%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>