force-app/main/default/objects/Due_Diligence__c/fields/Retention_of_the_customer_Score__c.field-meta.xml
<CustomField>
    <fullName>Retention_of_the_customer_Score__c</fullName>
    <formula>CASE(TEXT(    Retention_of_the_customer_Rating__c ),
&apos;Exceed Expectations&apos;,  Retention_of_the_customer_Weight__c *1,
 &apos;Meet Expectations&apos;,Retention_of_the_customer_Weight__c  *0.85,
&apos;Average&apos;,Retention_of_the_customer_Weight__c *0.6,
&apos;High Risk&apos;,Retention_of_the_customer_Weight__c *0.25,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retention of the customer Score%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>