force-app/main/default/objects/Due_Diligence__c/fields/Retention_of_the_customer_Weight__c.field-meta.xml
<CustomField>
    <fullName>Retention_of_the_customer_Weight__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Retention of the customer Weight%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>