force-app/main/default/objects/Due_Diligence__c/fields/Revenue_Growth_for_last_3_year_Score__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Growth_for_last_3_year_Score__c</fullName>
    <formula>CASE(TEXT(  Revenue_Growth_for_last_3_years_Rating__c ),
 &apos;Exceed Expectations&apos;,  Revenue_Growth_for_last_3_year_Weight__c *1,
 &apos;Meet Expectations&apos;,Revenue_Growth_for_last_3_year_Weight__c *0.85,
&apos;Average&apos;,Revenue_Growth_for_last_3_year_Weight__c *0.6,
&apos;High Risk&apos;,Revenue_Growth_for_last_3_year_Weight__c *0.25,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Growth for last 3 year Score%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>