force-app/main/default/objects/Due_Diligence__c/fields/Revenue_Growth_for_last_3_year_Weight__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Growth_for_last_3_year_Weight__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Revenue Growth for last 3 year Weight%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>