force-app/main/default/objects/Due_Diligence__c/fields/Service_Delivery_Overall_Weight__c.field-meta.xml
<CustomField>
    <fullName>Service_Delivery_Overall_Weight__c</fullName>
    <formula>No_of_Field_Engineers_Weight__c +   Skilled_Employees_Certification_Weight__c +  OEM_Product_support_Weight__c +  Maintenance_or_break_fix_support_Weight__c + Existing_Customer_Recommendation_Weight__c + Overall_delivery_capabilities_Weight__c</formula>
    <label>Service Delivery Overall Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>