force-app/main/default/objects/Due_Diligence__c/fields/Skilled_Employees_Certification_Rating__c.field-meta.xml
<CustomField>
    <fullName>Skilled_Employees_Certification_Rating__c</fullName>
    <label>Skilled Employees/Certification Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exceed Expectations</fullName>
            </value>
            <value>
                <fullName>Meet Expectations</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>High Risk</fullName>
            </value>
            <value>
                <fullName>Not Ready for Partnership</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>