force-app/main/default/objects/Due_Diligence__c/fields/Skilled_Employees_Certification_Score__c.field-meta.xml
<CustomField>
    <fullName>Skilled_Employees_Certification_Score__c</fullName>
    <formula>CASE(TEXT(  Skilled_Employees_Certification_Rating__c ),
&apos;Exceed Expectations&apos;,  Skilled_Employees_Certification_Weight__c *1,
 &apos;Meet Expectations&apos;,Skilled_Employees_Certification_Weight__c *0.85,
&apos;Average&apos;,Skilled_Employees_Certification_Weight__c *0.6,
&apos;High Risk&apos;,Skilled_Employees_Certification_Weight__c *0.25,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skilled Employees/Certification Score%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>