force-app/main/default/objects/Due_Diligence__c/fields/Skilled_Employees_Certification_ScoreTC__c.field-meta.xml
<CustomField>
    <fullName>Skilled_Employees_Certification_ScoreTC__c</fullName>
    <formula>CASE(TEXT(  Skilled_Employees_Certification_RatingTC__c ),
&apos;Exceed Expectations&apos;,  Skilled_Employees_Certification_WeightTC__c *1,
 &apos;Meet Expectations&apos;,Skilled_Employees_Certification_WeightTC__c *0.85,
&apos;Average&apos;,Skilled_Employees_Certification_WeightTC__c  *0.6,
&apos;High Risk&apos;,Skilled_Employees_Certification_WeightTC__c *0.25,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skilled Employees/Certification Score%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>