force-app/main/default/objects/Due_Diligence__c/fields/Skilled_Employees_Certification_Weight__c.field-meta.xml
<CustomField>
    <fullName>Skilled_Employees_Certification_Weight__c</fullName>
    <defaultValue>$CustomMetadata.DD_Weightage__mdt.DD_Weightage21.SkilledEmployeesCertificationWeightSD__c</defaultValue>
    <description>For service delivery</description>
    <inlineHelpText>For service delivery</inlineHelpText>
    <label>Skilled Employees/Certification Weight%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>