force-app/main/default/objects/Due_Diligence__c/fields/SLA_Overall_Weight__c.field-meta.xml
<CustomField>
    <fullName>SLA_Overall_Weight__c</fullName>
    <formula>X2_hours_Fix_Resolution_Weight__c + X4_hours_Fix_Resolution_Weight__c + X8_hours_Fix_Resolution_Weight__c +  NBD_Resolution_or_Others_Weight__c</formula>
    <label>SLA Overall Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>