force-app/main/default/objects/Due_Diligence__c/fields/Spare_Management_Overall_Weight__c.field-meta.xml
<CustomField>
    <fullName>Spare_Management_Overall_Weight__c</fullName>
    <formula>(  Current_spare_in_stock_Management_Weight__c + Warehouse_Management_Weight__c + OEM_model_Spare_replacement_Weight__c +  Warranty_Out_of_warranty_support_Weight__c )/ 100</formula>
    <label>Spare Management Overall Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>