force-app/main/default/objects/Due_Diligence__c/fields/Technical_capabilities_Overall_Weight__c.field-meta.xml
<CustomField>
    <fullName>Technical_capabilities_Overall_Weight__c</fullName>
    <formula>(   OEM_Partnership_Certification_Weight__c +  Skilled_Employees_Certification_WeightTC__c +  Technical_delivery_Matrix_Weight__c + Products_supported_Weight__c  )/100</formula>
    <label>Technical capabilities Overall Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>