force-app/main/default/objects/Due_Diligence__c/fields/Technical_delivery_Matrix_Score__c.field-meta.xml
<CustomField>
    <fullName>Technical_delivery_Matrix_Score__c</fullName>
    <formula>CASE(TEXT(  Technical_delivery_Matrix_Rating__c ),
&apos;Exceed Expectations&apos;,  Technical_delivery_Matrix_Weight__c *1,
 &apos;Meet Expectations&apos;,Technical_delivery_Matrix_Weight__c*0.85,
&apos;Average&apos;,Technical_delivery_Matrix_Weight__c*0.6,
&apos;High Risk&apos;,Technical_delivery_Matrix_Weight__c*0.25,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technical delivery Matrix Score%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>