force-app/main/default/objects/Due_Diligence__c/fields/Technical_delivery_Matrix_Weight__c.field-meta.xml
<CustomField>
    <fullName>Technical_delivery_Matrix_Weight__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Technical delivery Matrix Weight%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>