force-app/main/default/objects/Due_Diligence__c/fields/Ticketing_tools_process_Score__c.field-meta.xml
<CustomField>
    <fullName>Ticketing_tools_process_Score__c</fullName>
    <formula>CASE(TEXT(    Ticketing_tools_process_Rating__c ),
&apos;Exceed Expectations&apos;,  Ticketing_tools_process_Weight__c *1,
 &apos;Meet Expectations&apos;,Ticketing_tools_process_Weight__c *0.85,
&apos;Average&apos;,Ticketing_tools_process_Weight__c *0.6,
&apos;High Risk&apos;,Ticketing_tools_process_Weight__c *0.25,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ticketing tools &amp; process Score%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>