force-app/main/default/objects/Due_Diligence__c/fields/Ticketing_tools_process_Weight__c.field-meta.xml
<CustomField>
    <fullName>Ticketing_tools_process_Weight__c</fullName>
    <defaultValue>$CustomMetadata.DD_Weightage__mdt.DD_Weightage21.Ticketing_tools_process_Weight__c</defaultValue>
    <label>Ticketing tools &amp; process Weight%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>