force-app/main/default/objects/Due_Diligence__c/fields/Value_add_innovation_Score__c.field-meta.xml
<CustomField>
    <fullName>Value_add_innovation_Score__c</fullName>
    <formula>CASE(TEXT(    Value_add_innovation_Rating__c ),
&apos;Exceed Expectations&apos;,  Value_add_innovation_Weight__c *1,
 &apos;Meet Expectations&apos;,Value_add_innovation_Weight__c *0.85,
&apos;Average&apos;,Value_add_innovation_Weight__c *0.6,
&apos;High Risk&apos;,Value_add_innovation_Weight__c *0.25,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value add &amp; innovation Score%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>