force-app/main/default/objects/Due_Diligence__c/fields/Value_add_innovation_Weight__c.field-meta.xml
<CustomField>
    <fullName>Value_add_innovation_Weight__c</fullName>
    <defaultValue>$CustomMetadata.DD_Weightage__mdt.DD_Weightage21.Value_add_innovation_Weight__c</defaultValue>
    <label>Value add &amp; innovation Weight%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>