force-app/main/default/objects/Due_Diligence__c/fields/Warehouse_Management_Score__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Management_Score__c</fullName>
    <formula>CASE(TEXT( Warehouse_Management_Rating__c ),
&apos;Exceed Expectations&apos;,  Warehouse_Management_Weight__c *1,
 &apos;Meet Expectations&apos;,Warehouse_Management_Weight__c *0.85,
&apos;Average&apos;,Warehouse_Management_Weight__c  *0.6,
&apos;High Risk&apos;,Warehouse_Management_Weight__c *0.25,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse Management Score%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>